# Nocturne

./: CMakeLists.txt  README.MD  warning_count.txt
kernel/include/lib/: vector.h
kernel/include/sys/: sync.h
kernel/include/sys/scheduler/: thread.h
kernel/src/: kernel.c
kernel/src/arch/x86/: isr.c
kernel/src/drv/audio/: hda.c
kernel/src/drv/disk/: ahci.c  ata_dma.c
kernel/src/fs/: fsm.c
kernel/src/io/: screen.c
kernel/src/lib/: vector.c
kernel/src/net/: stack.c
kernel/src/sys/: elf.c  file_descriptors.c  sync.c
kernel/src/sys/scheduler/: scheduler.c  thread.c
